# ShadowingApp

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  material.py  practice.py  segment.py
backend/app/routers/: evaluate.py  materials.py  pdf.py  practice.py  youtube.py
backend/app/services/: audio.py  evaluator.py  pdf.py  transcribe.py  tts.py  youtube.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: EvaluationResult.tsx  MaterialList.tsx  PdfImport.tsx  PracticeView.tsx  Recorder.tsx  WaveformPlayer.tsx  YouTubeImport.tsx
frontend/src/stores/: appStore.ts
scripts/: setup.ps1
